--- a/index.html
+++ b/index.html
@@ -20,34 +20,43 @@
     bottom: 99px;
     width: 177px;
     height: 222px;
-    background-image: linear-gradient(
-      to left,
-      #d5b43d 17%, #b08e30 73%, #828426 96%)
+    background-image: linear-gradient(to left,
+        #d5b43d 17%, #b08e30 73%, #828426 96%)
+  }
+
+  .canR::before {
+  content: "";
+  position: absolute;
+  height: 66px;
+  width: 55px;
+  right: 27px;
+  top: 44px;
+  clip-path: polygon(100% 0, 84% 18%, 100% 46%, 67% 43%, 49% 69%, 30% 44%, 0 45%, 16% 22%, 0 0);
+ 	background-image: linear-gradient(
+    #4a0e09 15%, #ede8ed 20%, #1f0e02 25%, #a5882d 50%);
   }
   
   .canR::after {
     content: "";
     position: absolute;
     border-radius: 50%;
-    background-image: radial-gradient(
-      ellipse at 50% 46%,
-      #cfae3b 25%, #815e1f 53%, #d9cf94 61%, #b59732 66%);
+    background-image: radial-gradient(ellipse at 50% 46%,
+        #cfae3b 25%, #815e1f 53%, #d9cf94 61%, #b59732 66%);
     z-index: 2;
     width: 100%;
     height: 26px;
     top: -15px;
   }
-  
+
   .redR {
-    background-image: linear-gradient(
-      to left,
-      #b62b2f 44%, #4b0c12 93%);
+    background-image: linear-gradient(to left,
+        #b62b2f 44%, #4b0c12 93%);
     width: 100%;
     height: 63px;
     position: absolute;
     bottom: 0px;
   }
-  
+
   .redR::after {
     content: "";
     position: absolute;
@@ -56,11 +65,10 @@
     width: 100%;
     height: 11px;
     bottom: -6px;
-    background-image: linear-gradient(
-      to right, 
-      #4e4045 16%, #effdfe 25%, #806057 32%, #fbe3d5 100%);
+    background-image: linear-gradient(to right,
+        #4e4045 16%, #effdfe 25%, #806057 32%, #fbe3d5 100%);
   }
- 
+
   .line1R {
     position: absolute;
     top: 30px;
@@ -68,8 +76,10 @@
     font-size: 40;
     font-family: cursive;
     font-weight: 900;
+    color: transparent;
+    text-shadow: 0 0 2px black;
   }
-  
+
   .line1R::after {
     content: "USTELO";
     position: absolute;
@@ -88,18 +98,20 @@
     font-family: cursive;
     font-weight: 900;
     letter-spacing: 1.5;
+    color: transparent;
+    text-shadow: 0 0 2px black;
   }
-  
-   .line3R {
+
+  .line3R {
     position: absolute;
     top: 160px;
-    left: 10px;
-    font-size: 10;
+    left: 0px;
+    text-align: center;
+    font-size: 8;
     font-family: cursive;
     font-weight: 900;
-    letter-spacing: 1.5;
     color: transparent;
-    text-shadow: 0 0 2px rgb(220, 204, 160);
+    text-shadow: 0 0 3px rgb(220, 204, 160);
     z-index: 2;
   }
 
@@ -109,36 +121,58 @@
     bottom: 111px;
     width: 177px;
     height: 222px;
-    background-image: linear-gradient(
-      to left,
-      #74671e 28%, #a5882d 100%);
+    background-image: linear-gradient(to left,
+        #74671e 28%, #a5882d 100%);
     z-index: -1;
   }
 
-    .canL::after {
+    .canL::before {
+  content: "";
+  position: absolute;
+  height: 66px;
+  width: 55px;
+  left: 5px;
+  top: 55px;
+  clip-path: polygon(87% 0, 69% 18%, 86% 38%, 50% 41%, 25% 64%, 20% 40%, 1% 36%, 11% 22%, 0 0);
+ 	background-image: linear-gradient(
+    #4a0e09 15%, #ede8ed 20%, #1f0e02 25%, #c88800 50%);
+  }
+  
+  .canL::after {
     content: "";
     position: absolute;
     border-radius: 50%;
-    background-image: radial-gradient(
-      ellipse at 50% 46%,
-      #957d28 23%, #6d5b1b 51%, #dad48a 68%, #4f4411 79%);
+    background-image: radial-gradient(ellipse at 50% 46%,
+        #957d28 23%, #6d5b1b 51%, #dad48a 68%, #4f4411 79%);
     z-index: 2;
     width: 100%;
     height: 20px;
     top: -10px;
   }
-  
+
   .redL {
-   background-image: linear-gradient(
-      to left,
-      #3a0706 19%, #66212c 72%);
+    background-image: linear-gradient(to left,
+        #3a0706 19%, #66212c 72%);
     width: 100%;
     height: 63px;
     position: absolute;
     bottom: 0px;
   }
 
-    .redL::after {
+  .redL::before {
+    content: "";
+    position: absolute;
+    height: 55px;
+    width: 40px;
+    top: -11px;
+    right: 55px;
+    background-image: linear-gradient(
+      #0f0f0f 0%, #ede8ed 4%, #ccbdc0 7%, #1d1d1b 11%, #808189 15%, #abb6ba 19%, #484146 22%, #050505 26%, #a6a3a8 30%, #262527 33%, #2c2a2c 37%, #d6d1d6 41%, #5f5b58 44%, #1b1918 48%, #a3a3a3 52%, #1b1b1d 56%, #303636 59%, #e1e5e0 63%, #1c1b1d 67%, #bfbbbf 70%, #202122 74%, #e1e5e5 78%, #1a191a 81%, #161717 85%, #676567 89%, #e0e1e1 93%, #2f2d2e 96%, #4f4e50 100%);
+    z-index: 3;
+    border: 5px solid rgb(207, 188, 179);
+  }
+  
+  .redL::after {
     content: "";
     position: absolute;
     z-index: -1;
@@ -146,18 +180,65 @@
     width: 100%;
     height: 11px;
     bottom: -6px;
-    background-image: linear-gradient(
-      to right, 
-      #716264 14%, #d0d1d8 22%, #3a2322 38%, #523b39 66%, #150403 87%);
+    background-image: linear-gradient(to right,
+        #716264 14%, #d0d1d8 22%, #3a2322 38%, #523b39 66%, #150403 87%);
+  }
+
+   .line1L {
+    position: absolute;
+    top: 39px;
+    right: 11px;
+    font-size: 40;
+    font-family: cursive;
+    font-weight: 900;
+    color: transparent;
+    text-shadow: 0 0 2px black;
+  }
+
+  .line1L::before {
+    content: "LO";
+    position: absolute;
+    top: 50px;
+    left: -140px;
+    font-size: 40;
+    font-family: cursive;
+    font-weight: 900;
+  }
+  
+  .line1L::after {
+    content: "B";
+    position: absolute;
+    top: 50px;
+    left: -1px;
+    font-size: 40;
+    font-family: cursive;
+    font-weight: 900;
+  }
+  
+  .line2L {
+    position: absolute;
+    color: transparent;
+    top: 25px;
+    left: 65px;
+    text-shadow: 0 0 2px black;
+    border: 3px solid rgba(28, 0, 0, 0.38);
+    height: 140px;
+    width: 60px;
+    font-size: 4
   }
   
   .cup {
     position: absolute;
-    background-color: blue;
+    background-image: linear-gradient(
+      #342678 48%, #e5dabd 52%);
+    background-size: 3em;
+    border: 5px solid rgb(229, 218, 189);
+    border-right: none;
     width: 100px;
-    height: 50px;
-    right: 50px;
-    bottom: 350px;
+    height: 63px;
+    right: 99px;
+    bottom: 338px;
+    z-index: 3;
   }
 
   .triangle {
@@ -172,8 +253,8 @@
     background-color: orange;
     width: 130px;
     height: 190px;
-    right: 30px;
-    bottom: 120px;
+    right: 90px;
+    top: 40px;
     z-index: -2;
   }
 </style>
@@ -189,8 +270,8 @@
   </div>
 
   <div class="canL">
-    <div class="brandL">CAFE BUSTELO</div>
-    <div class="comicL"></div>
+    <div class="line1L">C</div>
+    <div class="line2L">hello I am writing from a laptop<br> I do not know what is actually written here so I guess I'll make it<br> up. pls dont hate me I'm trying my best :((((( but while I have you here, I want to ask you to close your <br> current sight perceiving mechanism(s) and listen <br> to me speak. Where is the warmth? Where is she in your memory? Does one end feel the same as being at the other? Have you smiled today? Will she dance tomorrow? If I have a mango, will you come over? Take food as your medicine and medicine as your food. How can I fuck around and find out if fucking around within the system is not fucking around, and if one cannot escape the system to fuck. I will die and it will all be over soon. You wont know me. You wont need me. Need will know you not me. We all fall into the water and the river carries us away. And we all fall down. And we all fall back. Peace and Love on Earth. Screen age.</div>
     <div class="redL"></div>
   </div>
 
